--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,57 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+body{
+    width: 100%;
+    height: 100%;
+}
+
+h1{
+    font-family: 'alfa slab', sans-serif;
+    color: white;
+    font-weight: 800;
+}
+
+nav{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    // margin: 20px 20px 0px 20px;
+    .container-header{
+        display: flex;
+        justify-content: space-between;
+        min-width: 100%;
+        // margin: 0;
+        .navbar-brand{
+            width: 50%;
+            float: left;
+        }
+        .navbar-collapse{
+            width: 50%;
+            float: right;
+        }
+    }
+}
+
+.subtitle{
+    display: flex;
+    width: 100%;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .orange-block{
+        width: 350px;
+        height: 20px;
+        background-color: orangered;
+        border-top: 10px;
+    }
+    hr{
+        width: 100%;
+        height: 2px;
+        border: 1px solid orangered;
+        opacity: 100;
+        margin: 0;
+    }
+}
