--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -60,3 +60,27 @@ nav{
         margin: 0;
     }
 }
+.container{
+    display: flex;
+    margin: 0;
+    min-width: 100%;
+    .row{
+        width: 100%;
+        margin: 0;
+        .albumshold{
+            display: flex;
+            justify-content: space-between;
+           width: 100%;
+           height: 400px;
+            .album{
+                width: 400px;
+                height: 400px;
+                img{
+                width: 100%;
+                }  
+            }
+            
+        }
+    }
+}
+
