--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -109,8 +109,23 @@ nav {
 
                 &:hover {
                     .album-info {
+                        padding-top: 130px;
+                        padding-bottom: 130px;
                         transition: 1s;
                         display: flex;
+                        flex-wrap: wrap;
+
+                        h2 {
+                            width: 100%;
+                            color: #fff;
+                            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+                            font-weight: bold;
+                            letter-spacing: 1px;
+                        }
+
+                        h3 {
+                            width: 100%;
+                        }
                     }
 
                     img {
