--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,31 +1,32 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
+@import url("https://fonts.bunny.net/css?family=Nunito");
 
 // Variables
-@import 'variables';
+@import "variables";
 
 // Bootstrap
-@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/bootstrap";
 
 body {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 h1 {
-    font-family: 'alfa slab', sans-serif;
+    font-family: "alfa slab", sans-serif;
     color: white;
     font-weight: 800;
 }
 
 h2 {
-    font-family: 'alfa slab', sans-serif;
+    font-family: "alfa slab", sans-serif;
     color: white;
     font-weight: 800;
 }
 
 h3 {
-    font-family: 'alfa slab', sans-serif;
+    font-family: "alfa slab", sans-serif;
     color: white;
     font-weight: 800;
 }
@@ -167,5 +168,34 @@ nav {
                 }
             }
         }
+    }
+}
+.album-row {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    margin: 40px;
+    width: 100%;
+
+    h2 {
+        margin-bottom: 10px;
+    }
+
+    p {
+        margin-bottom: 10px;
+        color: white;
+    }
+
+    img {
+        width: 300px;
+        height: 300px;
+        object-fit: cover;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease;
+    }
+
+    img:hover {
+        transform: scale(1.05);
     }
 }
