--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -170,6 +170,7 @@ nav {
         }
     }
 }
+
 .album-row {
     display: flex;
     flex-direction: column;
@@ -197,5 +198,10 @@ nav {
 
     img:hover {
         transform: scale(1.05);
+    }
+
+    ul {
+        color: white;
+        margin: 20px 20px 0 0;
     }
 }
